syntax = "proto3";
package models.v1;
// External
import "google/api/field_behavior.proto";
import "google/protobuf/timestamp.proto";
import "gateway/protoc-gen-openapiv2/annotations.proto";
option go_package = "github.com/pegwings/pegwings/proto/gen/go/api/v1;api";

// ListResponse is the response message returned by the models api in
// response to an authenticated list request.
message ListResponse {
  //
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema : {
      title : "List Models Response"
      description : "The response message returned by the models api in "
                    "response to an authenticated list request."
      required : [ "models" ]
    }
    external_docs : {
      url : "https://docs.pegwings.com/api/models"
      description : "Learn more about the Models API"
    }
  };

  // data is the list of models available for use by the caller.
  repeated Model data = 1 [
    (google.api.field_behavior) = OUTPUT_ONLY,
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      description : "The list of models available for use by the caller."
      example : "[\n"
                "	{\n"
                "		\"name\": \"k1\",\n"
                "		\"description\": \"The default model for "
                "pegwings.\",\n"
                "		\"created\": \"2023-03-14T16:15:07.000Z\",\n"
                "		\"owned_by\": \"pegwings\",\n"
                "		\"model_type\": \"k1\",\n"
                "		\"context_window\": 128000\n"
                "	},\n"
                "	{\n"
                "		\"name\": \"k2\",\n"
                "		\"description\": \"The default model for "
                "pegwings.\",\n"
                "		\"created\": \"2023-03-14T16:15:07.000Z\",\n"
                "		\"owned_by\": \"pegwings\",\n"
                "		\"model_type\": \"k2\",\n"
                "		\"context_window\": 128000\n"
                "	}\n"
                "]"
    }
  ];
}

// GetModelRequest is a request to get a specific model.
message ModelGetRequest {
  //
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema : {
      title : "Model Request"
      description : "The request message for the GetModel method."
      required : [ "model" ]
    }
    external_docs : {
      url : "https://docs.pegwings.com/api/models"
      description : "Learn more about the Models API"
    }
  };

  // model is the unique identifier of the model to retrieve.
  string model = 1 [
    (google.api.field_behavior) = REQUIRED,
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      description : "The unique identifier of the model to retrieve."
      example : "\"k1\""
    }
  ];
}
// Model is an ai model.
message Model {
  //
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema : {
      title : "Model"
      description : "The model message."
      required : [ "id", "created", "object", "owned_by" ]
      // pb:embed ./examples/v1.models.model.json
      example : "{\n"
                "                \"id\": \"k1\",\n"
                "                \"description\": \"The default model for "
                "pegwings.\",\n"
                "                \"created\": \"2023-03-14T16:15:07.000Z\",\n"
                "                \"owned_by\": \"pegwings\",\n"
                "                \"model_type\": \"k1\",\n"
                "                \"context_window\": 128000\n"
                "}"
    }
    external_docs : {
      url : "https://docs.pegwings.com/api/models"
      description : "Learn more about the Models API"
    }
  };

  // name is the unique identifier of the model.
  string name = 1 [
    (google.api.field_behavior) = OUTPUT_ONLY,
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      description : "The name/id of the model. This is the unique identifier "
                    "used to make requests that use the model."
      example : "\"k1\""
    }
  ];

  // description is the description of the model.
  string description = 2 [
    (google.api.field_behavior) = OUTPUT_ONLY,
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      description : "The description of the model."
      example : "\"The default model for pegwings.\""
    }
  ];

  // created is the timestamp when the model was created.
  google.protobuf.Timestamp created = 3 [
    (google.api.field_behavior) = OUTPUT_ONLY,
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      description : "The timestamp when the model was created."
      example : "\"2023-03-14T16:15:07.000Z\""
    }
  ];

  // owned_by is the organization who owns the model.
  string owned_by = 4 [
    (google.api.field_behavior) = OUTPUT_ONLY,
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      description : "The organization who owns the model."
      example : "\"pegwings\""
    }
  ];

  // model_type is the type of model. This informs clients of the type of
  // endpoints that support the model.
  string model_type = 5 [
    (google.api.field_behavior) = OUTPUT_ONLY,
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      description : "The type of model."
      example : "\"k1\""
    }
  ];

  // context_window is the context window for the model.
  int64 context_window = 6 [
    (google.api.field_behavior) = OUTPUT_ONLY,
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      description : "The context window for the model."
      example : "128000"
    }
  ];
}
